refactor UserController and User model